@@ -30,7 +30,8 @@ class VolumeFilter final : public Filter {
 public:
 	explicit VolumeFilter(const AudioFormat &audio_format)
 		:Filter(audio_format) {
-		out_audio_format.format = pv.Open(out_audio_format.format);
+		out_audio_format.format = pv.Open(out_audio_format.format,
+						  true);
 	}
 
 	unsigned GetVolume() const noexcept {
@@ -85,4 +86,3 @@ volume_filter_set(Filter *_filter, unsigned volume) noexcept
 
 	filter->SetVolume(volume);
 }
-
