@@ -36,7 +36,7 @@ TestVolume(G g=G())
 	typedef typename Traits::value_type value_type;
 
 	PcmVolume pv;
-	EXPECT_EQ(pv.Open(F), F);
+	EXPECT_EQ(pv.Open(F, false), F);
 
 	constexpr size_t N = 509;
 	static value_type zero[N];
@@ -77,6 +77,47 @@ TEST(PcmTest, Volume16)
 	TestVolume<SampleFormat::S16>();
 }
 
+TEST(PcmTest, Volume16to32)
+{
+	constexpr SampleFormat F = SampleFormat::S16;
+	typedef int16_t value_type;
+	RandomInt<value_type> g;
+
+	PcmVolume pv;
+	EXPECT_EQ(pv.Open(F, true), SampleFormat::S24_P32);
+
+	constexpr size_t N = 509;
+	static value_type zero[N];
+	const auto _src = TestDataBuffer<value_type, N>(g);
+	const ConstBuffer<void> src(_src, sizeof(_src));
+
+	pv.SetVolume(0);
+	auto dest = pv.Apply(src);
+	EXPECT_EQ(src.size * 2, dest.size);
+	EXPECT_EQ(0, memcmp(dest.data, zero, sizeof(zero)));
+
+	pv.SetVolume(PCM_VOLUME_1);
+	dest = pv.Apply(src);
+	EXPECT_EQ(src.size * 2, dest.size);
+	auto s = ConstBuffer<int16_t>::FromVoid(src);
+	auto d = ConstBuffer<int32_t>::FromVoid(dest);
+	for (size_t i = 0; i < N; ++i)
+		EXPECT_EQ(d[i], s[i] << 8);
+
+	pv.SetVolume(PCM_VOLUME_1 / 2);
+	dest = pv.Apply(src);
+	EXPECT_EQ(src.size * 2, dest.size);
+
+	s = ConstBuffer<int16_t>::FromVoid(src);
+	d = ConstBuffer<int32_t>::FromVoid(dest);
+	for (unsigned i = 0; i < N; ++i) {
+		const int32_t expected = (s[i] << 8) / 2;
+		EXPECT_EQ(d[i], expected);
+	}
+
+	pv.Close();
+}
+
 TEST(PcmTest, Volume24)
 {
 	TestVolume<SampleFormat::S24_P32>(RandomInt24());
@@ -90,7 +131,7 @@ TEST(PcmTest, Volume32)
 TEST(PcmTest, VolumeFloat)
 {
 	PcmVolume pv;
-	pv.Open(SampleFormat::FLOAT);
+	pv.Open(SampleFormat::FLOAT, false);
 
 	constexpr size_t N = 509;
 	static float zero[N];
